<?xml version="1.0"?>
<package format="3">
  <name>k230_msgs</name>
  <version>0.0.0</version>
  <description>Custom message definitions for K230 platform</description>

  <maintainer email="yypseek123@gmail.com">Yupu Yao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


